# MinecraftEnglish-ChineseDictionaryMaker

./: .gitignore  dictionary_maker.py  downloader.py  glossary_maker.py  main.py  mod_tsv_maker.py  pyproject.toml  util.py  version.py
.github/workflows/: release.yml
