[project]
name = "minecraft-language-auto-fetch"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.10"
dependencies = [
    "certifi==2025.8.3",
    "json5==0.12.1",
    "ollama>=0.5.3",
    "pyyaml==6.0.2",
    "tqdm>=4.67.1",
    "ujson==5.11.0",
]

# 添加包配置，解决flat-layout导致的构建问题
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false
